# CeresCApi

./: CMakeLists.txt  LICENSE.txt
src/: ceres_c_api.cpp  ceres_c_api.h
